--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li>
-            <a routerLink="/login"> <i class="fa fa-sign-out"></i> Log Out </a>
+            <a (click)="logout()" > <i class="fa fa-sign-out"></i> Log Out </a>
           </li>
         </ul>
       </button>
