--- a/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
+++ b/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
@@ -210,11 +210,7 @@
               <tr *ngFor="let record of monthlyWeightRecords">
                 <td>{{ record.monthlyWeightRecordsId }}</td>
                 <td>
-                  {{
-                    record.nameOfChild.firstName +
-                      " " +
-                      record.nameOfChild?.lastName
-                  }}
+                  {{ record.nameOfChild }}
                 </td>
                 <td>{{ record.birthday }}</td>
                 <td>{{ record.ageInMonths }}</td>
