--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
@@ -6,20 +6,29 @@
       <select
         id="monthSelect"
         [(ngModel)]="selectedMonth"
-        (change)="onMonthSelect()"
+        (change)="onMonthYearSelect()"
       >
-        <option value="January">January</option>
-        <option value="February">February</option>
-        <option value="March">March</option>
-        <option value="May">May</option>
-        <option value="June">June</option>
-        <option value="July">July</option>
-        <option value="August">August</option>
-        <option value="September">September</option>
-        <option value="October">October</option>
-        <option value="November">November</option>
-        <option value="December">December</option>
+        <option value="0">January</option>
+        <option value="1">February</option>
+        <option value="2">March</option>
+        <option value="3">April</option>
+        <option value="4">May</option>
+        <option value="5">June</option>
+        <option value="6">July</option>
+        <option value="7">August</option>
+        <option value="8">September</option>
+        <option value="9">October</option>
+        <option value="10">November</option>
+        <option value="11">December</option>
       </select>
+      <label for="monthSelect">Select Month: </label>
+
+      <input
+        type="number"
+        id="monthSelect"
+        [(ngModel)]="selectedYear"
+        (change)="onMonthYearSelect()"
+      />
       <table>
         <thead>
           <tr>
