--- a/src/app/home/bmi-result/bmi-result.component.css
+++ b/src/app/home/bmi-result/bmi-result.component.css
@@ -87,7 +87,7 @@ legend {
 .filter-container label {
   flex: 2;
   text-align: center;
-  background-color: #79AC78;
+  background-color: #79ac78;
   border-radius: 4px;
   padding: 5px 10px;
   margin-bottom: 2px;
@@ -109,7 +109,7 @@ legend {
 
 .filter-container button {
   flex: 1;
-  background-color: #79AC78;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -121,25 +121,36 @@ legend {
 }
 
 .filter-container button:hover {
-  background-color: #B0D9B1;
+  background-color: #b0d9b1;
 }
 
 .pagination {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 10px;
+  font-size: 20px;
+  margin: 0 10px;
+  font-weight: bold;
+  padding: 8px 16px;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 5px;
 }
 
 .paginationButton {
-  margin: 0 5px;
-  padding: 5px 10px;
-  border: 1px solid #333;
-  background-color: #f2f2f2;
-  color: #333;
+  padding: 8px 16px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
+  font-size: 15px;
+  margin: 0 5px;
+  background-color: #79ac78;
 }
 
-.paginationButton[disabled] {
-  background-color: #ccc;
-  color: #888;
-  cursor: not-allowed;
+.pagination button:hover {
+  background-color: #b0d9b1;
 }
