--- a/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
+++ b/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
@@ -207,11 +207,7 @@
               <tr *ngFor="let record of monthlyHeightRecords">
                 <td>{{ record.monthlyHeightRecordsId }}</td>
                 <td>
-                  {{
-                    record.nameOfChild.firstName +
-                      " " +
-                      record.nameOfChild?.lastName
-                  }}
+                  {{ record.nameOfChild }}
                 </td>
                 <td>{{ record.birthday }}</td>
                 <td>{{ record.ageInMonths }}</td>
