--- a/src/app/home/monthly-record-infant/monthly-record-infant.component.html
+++ b/src/app/home/monthly-record-infant/monthly-record-infant.component.html
@@ -19,27 +19,21 @@
       <div>
         <label for="searchChild">Search Child:</label>
         <input
+          list="childList"
           type="text"
           id="searchChild"
           name="searchChild"
           [(ngModel)]="searchInput"
           (input)="onSearchInputChange()"
         />
-      </div>
-
-      <div>
-        <label for="nameOfChild">Name Of Child:</label>
-        <select
-          id="nameOfChild"
-          name="nameOfChild"
-          [(ngModel)]="monthlyInfantRecordData.nameOfChild"
-          required
-        >
-          <option value="">Select a Child</option>
-          <option *ngFor="let child of filteredChildRecords" [ngValue]="child">
+        <datalist id="childList">
+          <option
+            *ngFor="let child of filteredChildRecords"
+            [value]="child.firstName + ' ' + child.lastName"
+          >
             {{ child.firstName }} {{ child.lastName }}
           </option>
-        </select>
+        </datalist>
       </div>
 
       <div>
@@ -87,7 +81,7 @@
             id="heightOrLength"
             name="heightOrLength"
             [(ngModel)]="monthlyInfantRecordData.heightOrLength"
-            (ngModelChange)="onheightOrLengthsChange()"
+            (ngModelChange)="onheightOrLengthChange()"
             required
           />
         </div>
