--- a/src/app/home/nutritional-status-summary-heightforage/nutritional-status-summary-heightforage.component.html
+++ b/src/app/home/nutritional-status-summary-heightforage/nutritional-status-summary-heightforage.component.html
@@ -2,106 +2,141 @@
   <fieldset id="bmiranking">
     <section class="barangay-nutritional-status">
       <h2>Barangay HeightForAge Nutritional Status</h2>
-      <label for="monthSelect">Select Month:</label>
-      <select
-        id="monthSelect"
-        [(ngModel)]="selectedMonth"
-        (change)="onMonthSelect()"
-      >
-        <option value="January">January</option>
-        <option value="February">February</option>
-        <option value="March">March</option>
-        <option value="May">May</option>
-        <option value="June">June</option>
-        <option value="July">July</option>
-        <option value="August">August</option>
-        <option value="September">September</option>
-        <option value="October">October</option>
-        <option value="November">November</option>
-        <option value="December">December</option>
-      </select>
-      <table class="nutritional-status-table">
-        <thead>
-          <tr>
-            <th>Barangay</th>
-            <th>Severely Stunted</th>
-            <th>Stunted</th>
-            <th>Normal</th>
-            <th>Tall</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let barangay of barangayData">
-            <td>{{ barangay.barangay }}</td>
-            <td
-              (click)="
-                showDetailedInfoByCategory(
-                  barangay.barangay,
-                  'SSt',
-                  barangay.severelyStunted
-                )
-              "
+      <div class="ranking-table">
+        <label for="monthSelect">Select Month: </label>
+        <select
+          id="monthSelect"
+          [(ngModel)]="selectedMonth"
+          (change)="onMonthYearSelect()"
+        >
+          <option value="0">January</option>
+          <option value="1">February</option>
+          <option value="2">March</option>
+          <option value="3">April</option>
+          <option value="4">May</option>
+          <option value="5">June</option>
+          <option value="6">July</option>
+          <option value="7">August</option>
+          <option value="8">September</option>
+          <option value="9">October</option>
+          <option value="10">November</option>
+          <option value="11">December</option>
+        </select>
+        <label for="monthSelect">Select Month: </label>
+
+        <input
+          type="number"
+          id="monthSelect"
+          [(ngModel)]="selectedYear"
+          (change)="onMonthYearSelect()"
+        />
+        <table class="nutritional-status-table">
+          <thead>
+            <tr>
+              <th>Barangay</th>
+              <th>Severely Stunted</th>
+              <th>Stunted</th>
+              <th>Normal</th>
+              <th>Tall</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let barangay of barangayData">
+              <td>{{ barangay.barangay }}</td>
+              <td
+                (click)="
+                  showDetailedInfoByCategory(
+                    barangay.barangay,
+                    'SSt',
+                    barangay.severelyStunted
+                  )
+                "
+              >
+                {{ barangay.severelyStunted }}
+              </td>
+              <td
+                (click)="
+                  showDetailedInfoByCategory(
+                    barangay.barangay,
+                    'St',
+                    barangay.stunted
+                  )
+                "
+              >
+                {{ barangay.stunted }}
+              </td>
+              <td
+                (click)="
+                  showDetailedInfoByCategory(
+                    barangay.barangay,
+                    'N',
+                    barangay.normal
+                  )
+                "
+              >
+                {{ barangay.normal }}
+              </td>
+              <td
+                (click)="
+                  showDetailedInfoByCategory(
+                    barangay.barangay,
+                    'T',
+                    barangay.tall
+                  )
+                "
+              >
+                {{ barangay.tall }}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="modal" *ngIf="showModal">
+          <div class="modal-content">
+            <span (click)="closeModal()">&times;</span>
+            <div *ngIf="selectedBarangayInfo.length > 0">
+              <table>
+                <thead>
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Height</th>
+                    <th>Result</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    *ngFor="
+                      let info of selectedBarangayInfo.slice(
+                        startIndex,
+                        endIndex
+                      )
+                    "
+                  >
+                    <td>{{ info.nameOfChild.firstName }}</td>
+                    <td>{{ info.nameOfChild.lastName }}</td>
+                    <td>{{ info.height }}</td>
+                    <td>{{ info.heightForAge }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="pagination">
+            <button
+              class="paginationButton"
+              (click)="goToPage(currentPage - 1)"
+              [disabled]="currentPage === 1"
             >
-              {{ barangay.severelyStunted }}
-            </td>
-            <td
-              (click)="
-                showDetailedInfoByCategory(
-                  barangay.barangay,
-                  'St',
-                  barangay.stunted
-                )
-              "
+              Previous
+            </button>
+            <span>Children Profile Page {{ currentPage }}</span>
+            <button
+              class="paginationButton"
+              (click)="goToPage(currentPage + 1)"
+              [disabled]="endIndex >= selectedBarangayInfo.length"
             >
-              {{ barangay.stunted }}
-            </td>
-            <td
-              (click)="
-                showDetailedInfoByCategory(
-                  barangay.barangay,
-                  'N',
-                  barangay.normal
-                )
-              "
-            >
-              {{ barangay.normal }}
-            </td>
-            <td
-              (click)="
-                showDetailedInfoByCategory(
-                  barangay.barangay,
-                  'T',
-                  barangay.tall
-                )
-              "
-            >
-              {{ barangay.tall }}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="modal" *ngIf="showModal">
-        <div class="modal-content">
-          <span (click)="closeModal()">&times;</span>
-          <div *ngIf="selectedBarangayInfo.length > 0">
-            <table>
-              <thead>
-                <tr>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Height</th>
-                  <th>Result</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let info of selectedBarangayInfo">
-                  <td>{{ info.nameOfChild.firstName }}</td>
-                  <td>{{ info.nameOfChild.lastName }}</td>
-                  <td>{{ info.height }}</td>
-                  <td>{{ info.heightForAge }}</td>
-                </tr>
-              </tbody>
-            </table>
+              Next
+            </button>
           </div>
         </div>
       </div>
