--- a/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
+++ b/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
@@ -7,20 +7,30 @@
         <select
           id="monthSelect"
           [(ngModel)]="selectedMonth"
-          (change)="onMonthSelect()"
+          (change)="onMonthYearSelect()"
         >
-          <option value="January">January</option>
-          <option value="February">February</option>
-          <option value="March">March</option>
-          <option value="May">May</option>
-          <option value="June">June</option>
-          <option value="July">July</option>
-          <option value="August">August</option>
-          <option value="September">September</option>
-          <option value="October">October</option>
-          <option value="November">November</option>
-          <option value="December">December</option>
+          <option value="0">January</option>
+          <option value="1">February</option>
+          <option value="2">March</option>
+          <option value="3">April</option>
+          <option value="4">May</option>
+          <option value="5">June</option>
+          <option value="6">July</option>
+          <option value="7">August</option>
+          <option value="8">September</option>
+          <option value="9">October</option>
+          <option value="10">November</option>
+          <option value="11">December</option>
         </select>
+        <label for="monthSelect">Select Month: </label>
+
+        <input
+          type="number"
+          id="monthSelect"
+          [(ngModel)]="selectedYear"
+          (change)="onMonthYearSelect()"
+        />
+
         <table class="nutritional-status-table">
           <thead>
             <tr>
@@ -95,7 +105,14 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let info of selectedBarangayInfo">
+                  <tr
+                    *ngFor="
+                      let info of selectedBarangayInfo.slice(
+                        startIndex,
+                        endIndex
+                      )
+                    "
+                  >
                     <td>{{ info.nameOfChild.firstName }}</td>
                     <td>{{ info.nameOfChild.lastName }}</td>
                     <td>{{ info.weight }}</td>
@@ -104,6 +121,24 @@
                 </tbody>
               </table>
             </div>
+          </div>
+
+          <div class="pagination">
+            <button
+              class="paginationButton"
+              (click)="goToPage(currentPage - 1)"
+              [disabled]="currentPage === 1"
+            >
+              Previous
+            </button>
+            <span>Children Profile Page {{ currentPage }}</span>
+            <button
+              class="paginationButton"
+              (click)="goToPage(currentPage + 1)"
+              [disabled]="endIndex >= selectedBarangayInfo.length"
+            >
+              Next
+            </button>
           </div>
         </div>
       </div>
