--- a/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
+++ b/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
@@ -22,7 +22,7 @@
           <option value="10">November</option>
           <option value="11">December</option>
         </select>
-        <label for="monthSelect">Select Month: </label>
+        <label for="monthSelect"> Select Year: </label>
 
         <input
           type="number"
@@ -98,8 +98,7 @@
               <table>
                 <thead>
                   <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
+                    <th>Child Name</th>
                     <th>Weight</th>
                     <th>Result</th>
                   </tr>
@@ -113,8 +112,7 @@
                       )
                     "
                   >
-                    <td>{{ info.nameOfChild.firstName }}</td>
-                    <td>{{ info.nameOfChild.lastName }}</td>
+                    <td>{{ info.nameOfChild }}</td>
                     <td>{{ info.weight }}</td>
                     <td>{{ info.weightForAge }}</td>
                   </tr>
@@ -131,7 +129,7 @@
             >
               Previous
             </button>
-            <span>Children Profile Page {{ currentPage }}</span>
+            <span>Weight For Age {{ currentPage }}</span>
             <button
               class="paginationButton"
               (click)="goToPage(currentPage + 1)"
