--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -27,8 +27,11 @@
       </div>
 
       <div class="Login">
-        <div style="text-align: center">
+        <div>
           <button type="submit">Login</button>
+        </div>
+        <div style="text-align: center">
+          <button class="bck-btn" routerLink="/">Back</button>
         </div>
       </div>
     </form>
