--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
@@ -21,7 +21,7 @@
         <option value="10">November</option>
         <option value="11">December</option>
       </select>
-      <label for="monthSelect">Select Month: </label>
+      <label for="monthSelect"> Select Year: </label>
 
       <input
         type="number"
@@ -112,8 +112,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>First Name</th>
-                  <th>Last Name</th>
+                  <th>Child Name</th>
                   <th>Height</th>
                   <th>Weight</th>
                   <th>Result</th>
@@ -121,8 +120,7 @@
               </thead>
               <tbody>
                 <tr *ngFor="let info of selectedBarangayInfo">
-                  <td>{{ info.childName.firstName }}</td>
-                  <td>{{ info.childName.lastName }}</td>
+                  <td>{{ info.childName }}</td>
                   <td>{{ info.height }}</td>
                   <td>{{ info.weight }}</td>
                   <td>{{ info.resultMessage }}</td>
@@ -134,4 +132,19 @@
       </div>
     </div>
   </fieldset>
+</div>
+<div class="chart-container">
+  <div>
+    <label for="yearFilter">Select Year:</label>
+    <input
+      type="number"
+      id="yearFilter"
+      [(ngModel)]="selectedYear"
+      (change)="onYearFilterChange()"
+      min="2020"
+      max="2100"
+    />
+  </div>
+
+  <canvas id="bmiChart"></canvas>
 </div>
