--- a/src/app/home/nutritional-status-summary/nutritional-status-summary.component.css
+++ b/src/app/home/nutritional-status-summary/nutritional-status-summary.component.css
@@ -104,6 +104,37 @@ h2 {
   color: red;
 }
 
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  font-size: 10px;
+  margin: 0 10px;
+  font-weight: bold;
+  padding: 8px 16px;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 5px;
+}
+
+.paginationButton {
+  padding: 8px 16px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 10px;
+  margin: 0 5px;
+  background-color: #79ac78;
+}
+
+.pagination button:hover {
+  background-color: #b0d9b1;
+}
+
 /* Adjust table responsiveness for small screens */
 @media (max-width: 600px) {
   table {
